Revert to 38ab4d4: Add feedback form with Supabase

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="description" content="Interactive analysis and discussion platform for Alexander C. Karp's The Technological Republic" />
     <meta name="author" content="Lovable" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <meta property="og:title" content="The Technological Republic - Interactive Analysis" />
     <meta property="og:description" content="Interactive analysis and discussion platform for Alexander C. Karp's The Technological Republic" />
     <meta property="og:type" content="website" />
