updated open graph preview

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Technological Republic - Interactive Analysis</title>
-    <meta name="description" content="Interactive analysis and discussion platform for Alexander C. Karp's The Technological Republic" />
-    <meta name="author" content="Lovable" />
+    <title>The Technological Republic - Interactive Explorer</title>
+    <meta name="description" content="Interactive web application for exploring Alex Karp's 'The Technological Republic' with AI-powered discussion, network visualizations, and multimedia content." />
+    <meta name="author" content="William VanBuskirk" />
 
-    <meta property="og:title" content="The Technological Republic - Interactive Analysis" />
-    <meta property="og:description" content="Interactive analysis and discussion platform for Alexander C. Karp's The Technological Republic" />
+    <meta property="og:title" content="The Technological Republic - Interactive Explorer" />
+    <meta property="og:description" content="Interactive web application for exploring Alex Karp's 'The Technological Republic' with AI-powered discussion, network visualizations, and multimedia content." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/preview-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="The Technological Republic - Interactive Explorer" />
+    <meta name="twitter:description" content="Interactive web application for exploring Alex Karp's 'The Technological Republic' with AI-powered discussion, network visualizations, and multimedia content." />
+    <meta name="twitter:image" content="/preview-image.png" />
   </head>
 
   <body>
