updated context and network diagram

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <meta name="twitter:title" content="The Technological Republic - Interactive Explorer" />
     <meta name="twitter:description" content="Interactive web application for exploring Alex Karp's 'The Technological Republic' with AI-powered discussion, network visualizations, and multimedia content." />
     <meta name="twitter:image" content="/preview-image.png" />
+
+    <!-- Light mode favicon -->
+    <link rel="icon" href="/favicon-light.ico" media="(prefers-color-scheme: light)">
+    <!-- Dark mode favicon -->
+    <link rel="icon" href="/favicon-dark.ico" media="(prefers-color-scheme: dark)">
   </head>
 
   <body>
